--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "chart.js": "^4.0.1",
+    "moment": "^2.29.4",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "zod": "^3.18.0"
