--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.13",
     "chart.js": "^4.0.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
